       (changes since jEdit 5.0.0)
:encoding=UTF-8:

{{{ Version 5.1pre1

Thanks to Björn "Vampire" Kautler, Jarek Czekalski, Thomas Meyer,
Matthieu Casanova, Alan Ezust, Malathi, Vladimir Avdonin, Eric Le Lay,
Darien Brown, Steve snarum-micron, EdorFaus, Brian Clapper, Uwe Stöhr,
Marc Häfner, stone1343, Dale Anson, and Maik Nijhuis for contributing
to this release.

{{{ Bug fixes

- Bug no. #3590540 produced a soft wrap for a single physical line that was
  greater than 16383 screen lines. Increased this limit to 65535 in
  the ScreenLineManager (Thomas Meyer)

- Fixed Insert_Selection macro when the selection is empty (#3596616
  Matthieu Casanova)

- fixed bug when pressing down if the is no selection (#3599630
  Matthieu Casanova)

- Fixed macros cut lines and copy lines when the buffer is empty (#3596612
  Matthieu Casanova)

- Fixed negative values used in recent file history count (#3598661 Matthieu
  Casanova)

- Fixed Run script macro when the file is empty (#3596609 Matthieu
  Casanova)

- Fixed Get_Class_Name macro when the file is empty (#3596752 Matthieu
  Casanova)

- Re-added missing OS/2 support code. (#3589903 Alan Ezust)

- Added missing localization string:
  options.plugin-manager.list-cache.minutes (#3574373 Matthieu Casanova)

- Fix AutoSave exception after multiline cut (#3017650 Thomas Meyer)

- Undomanager: Don't compact significant edits (#patch 3560615 Thomas Meyer)

- Fixed undo after replace all with beanshell only first occurance
  (#3551910 Thomas Meyer)

- Search all buffers now observes current BufferSet scope and can be restricted
  to the current view's buffers when scope is not global. (#3423442 Alan Ezust)

- Fix File status checking after buffer switch (#1871440 Alan Ezust)

- Undo restores selection state in simple cases (deletions, replaces
  on simple range selections). (patch #1570553 Maik Nijhuis, Thomas Meyer,
  Jarek Czekalski)

- Filter not synchronizing in search dialog when